welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:38: error: not found: value reculer
reculer();	
^